@@ -1,6 +1,6 @@
 {% if object.file.url %}
 <span class="file">
-<a href="{{ object.file.url }}"{% if object.target_blank %} target="_blank"{% endif %} {{ object.attributes_str }}>
+<a href="{{ object.file.url }}"{% if object.target_blank %} target="_blank"{% endif %} {{ object.link_attributes_str }}>
 {% if object.get_icon_url %}<img src="{{ object.get_icon_url }}" style="border: 0px" alt="Icon" />{% endif %}
 {% if object.title %}{{ object.title }}{% else %}{{ object.get_file_name }}{% endif %} {% if object.file_exists %}<span class="filesize">({{ object.file.size|filesizeformat }})</span>{% else %}(file missing!){% endif %}</a>
 </span>
