@@ -1,1 +1,1 @@
-<a href="{{ link }}" class="{{style}}"{% if new_window %} target="_blank"{% endif %} {{ instance.attributes_str }}>{{ name }}</a>
+<a href="{{ link }}" class="{{style}}"{% if new_window %} target="_blank"{% endif %} {{ instance.link_attributes_str }}>{{ name }}</a>
